--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.7.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  csv: ^5.0.1
 
 dev_dependencies:
   flutter_test:
@@ -51,9 +52,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  freezed: ^2.1.1
+  freezed: ^2.0.3+1
   json_serializable: ^6.4.0
   build_runner: ^2.2.1
+  hive_generator: ^1.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
